--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -49,7 +49,7 @@
                 <div
                     class="card bg-[#def2cc] m-4 h-[22rem] w-[18rem] border-2 border-black p-1 rounded flex flex-col justify-between">
                     <div class="image">
-                        <img class="rounded w-full h-44" src="/Natural Burial/static/images/woodenmemorialcross.jpg"
+                        <img class="rounded w-full h-44" src="../static/images/woodenmemorialcross.jpg"
                             alt="This is a wooden cross used for memorial purposes.">
                     </div>
                     <div class="container flex justify-between items-center">
@@ -69,7 +69,7 @@
                 <div
                     class="card bg-[#def2cc] h-[22rem] w-[18rem] m-4 border-2 border-black p-1 rounded flex flex-col justify-between">
                     <div>
-                        <img class="image rounded w-full h-44" src="/Natural Burial/static/images/stonemarker.jpeg"
+                        <img class="image rounded w-full h-44" src="../static/images/stonemarker.jpeg"
                             alt="This is engraved stone marker for natural burial.">
                     </div>
                     <div class="container flex justify-between items-center">
@@ -89,7 +89,7 @@
                 <div
                     class="card bg-[#def2cc] h-[22rem] w-[18rem] m-4 border-2 border-black p-1 rounded flex flex-col justify-between">
                     <div>
-                        <img class="image rounded w-full h-44" src="/Natural Burial/static/images/woodenplaque.jpeg"
+                        <img class="image rounded w-full h-44" src="../static/images/woodenplaque.jpeg"
                             alt="This is a standing wooden plaque for natural burial.">
                     </div>
                     <div class="container flex justify-between items-center">
@@ -109,7 +109,7 @@
                 <div
                     class="card bg-[#def2cc] h-[22rem] w-[18rem] m-4 border-2 border-black p-1 rounded flex flex-col justify-between">
                     <div>
-                        <img class="image w-full h-44 rounded" src="/Natural Burial/static/images/treemarker.jpeg"
+                        <img class="image w-full h-44 rounded" src="../static/images/treemarker.jpeg"
                             alt="This is a wooden board pinned at tree for identification.">
                     </div>
                     <div class="container flex justify-between items-center">
