updated final version

--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -20,6 +20,16 @@
 
 <body>
     <div class="form-box rounded mt-3">
+
+        <div class="form-heading text-center">
+            <h2>
+                NATURAL BURIAL FORM
+            </h2>
+            <hr class="border-gray-500 border-4">
+        </div>
+
+        <br>
+
         <form action="">
             <div class="general-info grid grid-cols-1 md:grid-cols-2 gap-5 text-center">
                 <label for="name">Name</label>
