--- a/Natural Burial/static/css/index.css
+++ b/Natural Burial/static/css/index.css
@@ -1,134 +1,8 @@
-* {
-    font-size: 2.2rem;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+html{
+    font-size: 16px;
 }
 
-body{
-    background-color: rgb(179, 212, 152);
-}
 
-/* CSS for form box */
-.form-box{
-    width: 95%;
-    margin-left: auto;
-    margin-right: auto;
+/* CSS by Sadikshya Oli */
 
-    background-color: antiquewhite;
-    padding: 2%;
-}
-
-input{
-    border: 2px solid blue;
-    border-radius: 4px;
-}
-
-input[type="number"]::-webkit-inner-spin-button, 
-input[type="number"]::-webkit-outer-spin-button {
-    -webkit-appearance: none;
-}
-
-/*
-    CSS by Sadikshya Oli
-    This CSS defines the styles for marker options
-*/
-
-/* Style for icons */
-.marker-option .icon {
-    width: 2rem;
-    line-height: 1rem;
-}
-
-/*Style for the text-base in paragraph*/
-.marker-option .text-base {
-    font-size: 1.5rem;
-}
-
-/* Style for radio buttons within elements with class 'radio' */
-.marker-option .card .radio input[type="radio"] {
-    height: 80%;
-    width: 2rem;
-}
-
-/*
-    CSS by Bhabin Chudal
-    This CSS defines style for burial options
-*/
-
-.burial-option{
-    height: 25rem;
-    width: 90%;
-    background-color:#f8cd7d;
-}
-
-.burial-option .heading{
-    height: 10%;
-}
-
-.burial-option .image {
-    width: 100%;
-    height: 75%;
-}
-
-.burial-option .radio{
-    height: 15%;
-}
-
-.burial-option .radio>input[type="radio"]{
-    transform:scale(5); /*Increasing the size of the radio button*/
-}
-
-/*
-    CSS by Aakarshan Khosla
-    This CSS defines the style for favourite quote/ inscription
-*/
-
-input{
-    border: 2px solid blue; /* Visible border */
-    border-radius: 4px;
-}
-
-/*
-    CSS by Aarav Sen Mehta
-    This CSS defines the style for grave location
-*/
-
-.grave-location .card{
-    height: 20rem;
-}
-
-.grave-location .pic {
-    width: 60%;
-}
-
-.grave-location .pic img {
-    height: 100%;
-    width: 100%;
-}
-
-.grave-location .heading{
-    height: fit-content;
-}
-
-.grave-location .desc {
-    width: 40%;
-    background-color: #def2cc;
-}
-
-/*Sets the height and width for the radio button*/
-.grave-location .radio input[type="radio"] {
-    width: 2rem;
-    height: 2rem;
-}
-
-.grave-location .sub-text {
-    height: 70%;
-}
-
-.grave-location .sub-text *{
-    font-size: 1.2rem;/*Sets the font size for the text that includes the description */
-}
-
-.grave-location .desc .interactive-section {
-    align-items:end; /*Aligns the button and the radio button*/
-    height: 30%;
-}
+/* WRITE CSS HERE [AND DELETE THIS COMMENT] */
