Starter files for Aarav

--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -25,9 +25,9 @@
 
             <!--
                 This HTML code contains details (text and images)
-                regarding marker options.
+                regarding grave site locations.
             -->
-            <div class="marker-options">
+            <div class="grave-locations">
 
                 <!--WRITE YOUR CODE HERE-->
                 
