Starter files for Bhabin

--- a/Natural Burial/templates/index.html
+++ b/Natural Burial/templates/index.html
@@ -25,9 +25,9 @@
 
             <!--
                 This HTML code contains details (text and images)
-                regarding grave site locations.
+                regarding burial-methods.
             -->
-            <div class="grave-locations">
+            <div class="burial-methods">
 
                 <!--WRITE YOUR CODE HERE-->
                 
